# EMC-Locus

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/emc-locus-agent/: Cargo.toml
crates/emc-locus-agent/src/: asset_correction_repository.rs  asset_correction_service.rs  document_dto.rs  document_repository.rs  document_service.rs  equipment_dto.rs  equipment_repository.rs  equipment_service.rs  file_store.rs  lib.rs  local_api.rs  main.rs  measurement_engineering_dto.rs  measurement_engineering_repository.rs  measurement_engineering_service.rs  metrology_agent.rs  metrology_dto.rs  metrology_repository.rs  metrology_service.rs  planned_test_preparation_dto.rs  planned_test_preparation_repository.rs  planned_test_preparation_service.rs  project_agent.rs  project_dto.rs  project_repository.rs  project_service.rs  service_schedule_dto.rs  service_schedule_repository.rs  service_schedule_service.rs  sqlite_policy.rs  station_setup_dto.rs  station_setup_repository.rs  station_setup_service.rs  test_execution_dto.rs  test_execution_repository.rs  test_execution_service.rs  test_template_dto.rs  (+2 more)
python/: pyproject.toml
python/emc_locus/: __init__.py  actions_cli.py  gui_actions.py  gui_bootstrap.py  local_agent_client.py  migrations.py  qt_console_data.py  qt_console_models.py  session_plan.py  sqlite_repositories.py  station_setup_ui.py
python/tests/: test_gui_shell_smoke.py  test_lab_console_static_build.py  test_local_agent_client.py  test_qt_console.py  test_release_consistency.py  test_sqlite_repositories.py  test_station_setup_ui.py
(+475 files in other folders)
