[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emc-locus"
version = "0.18.0"
description = "Python helpers for EMC Locus laboratory automation"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "EMC Locus contributors" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["emc_locus*"]
